<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0E1622">

    <RelativeLayout
        android:id="@+id/layout_head"
        android:layout_width="match_parent"
        android:layout_height="180px"
        android:background="#152338">

        <ImageView
            android:id="@+id/img_back"
            style="@style/style_top_back"
            android:layout_centerVertical="true" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/str_setting_chg_pwd"
            android:textColor="@color/color_white"
            android:textSize="48px"
            android:textStyle="bold" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/layout_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_head"
        android:divider="@drawable/divider_linearlayout"
        android:orientation="vertical"
        android:paddingLeft="@dimen/dimen_layout_margin"
        android:paddingTop="20px"
        android:paddingRight="@dimen/dimen_layout_margin"
        android:showDividers="middle">

        <com.brc.acctrl.view.CommonEditView
            android:id="@+id/layout_pwd_ori"
            android:layout_width="match_parent"
            android:layout_height="100px"
            app:tagHint="@string/str_pwd_ori_hint"
            app:tagLength="8"
            app:tagTitle="@string/str_pwd_ori" />

        <com.brc.acctrl.view.CommonEditView
            android:id="@+id/layout_pwd_new"
            android:layout_width="match_parent"
            android:layout_height="100px"
            app:tagHint="@string/str_pwd_new_hint"
            app:tagLength="8"
            app:tagTitle="@string/str_pwd_new" />

        <com.brc.acctrl.view.CommonEditView
            android:id="@+id/layout_pwd_new_confirm"
            android:layout_width="match_parent"
            android:layout_height="100px"
            app:tagHint="@string/str_pwd_new_confirm_hint"
            app:tagLength="8"
            app:tagTitle="@string/str_pwd_new_confirm" />

        <TextView
            android:id="@+id/tv_pwd_rule"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20px"
            android:text="@string/str_pwd_rule"
            android:textColor="#999999"
            android:textSize="24px"
            app:layout_constraintLeft_toLeftOf="parent" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_err"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_content"
        android:layout_marginTop="20px"
        android:drawableLeft="@drawable/icon_error"
        android:drawablePadding="10px"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/dimen_layout_margin"
        android:textColor="@color/color_white"
        android:textSize="28px"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/tv_enter"
        style="@style/style_btn_confirm"
        android:layout_marginLeft="100px"
        android:layout_marginRight="100px"
        android:text="@string/str_confirm" />

    <TextView
        android:id="@+id/tv_cancel"
        style="@style/style_btn_cancel"
        android:layout_below="@id/tv_enter"
        android:layout_centerHorizontal="true"
        android:text="@string/str_cancel" />

    <LinearLayout
        android:id="@+id/layout_chg_suc"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#CC000000"
        android:clickable="true"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:layout_width="260px"
            android:layout_height="260px"
            android:layout_marginTop="376px"
            android:background="@drawable/bg_chg_pwd_suc"
            android:paddingLeft="60px"
            android:paddingRight="60px"
            android:src="@drawable/icon_bg_suc" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40px"
            android:text="@string/str_pwd_chg_suc"
            android:textColor="@color/color_white"
            android:textSize="44px"
            android:textStyle="bold" />
    </LinearLayout>
</RelativeLayout>
