<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0B0F14"
    android:paddingTop="20px">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100px"
        android:drawablePadding="10dp"
        android:gravity="center"
        android:text="@string/str_setting_enter_pwd"
        android:textColor="@color/color_white"
        android:textSize="64px"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_pwd"
        android:layout_width="600px"
        android:layout_height="100px"
        android:layout_marginLeft="40px"
        android:layout_marginTop="240px"
        android:layout_marginRight="40px"
        android:background="@drawable/bg_rect_black_btm_white"
        android:digits="@string/digitsAndAlphet"
        android:gravity="center"
        android:hint="@string/str_input_pwd_hint"
        android:maxLength="8"
        android:paddingLeft="20px"
        android:singleLine="true"
        android:textColor="@color/color_white"
        android:textColorHint="@color/color_hint"
        android:textSize="28px"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_err"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20px"
        android:drawableLeft="@drawable/icon_error"
        android:drawablePadding="20px"
        android:gravity="center_vertical"
        android:text="@string/str_setting_pwd_error"
        android:textColor="@color/color_white"
        android:textSize="28px"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="@id/et_pwd"
        app:layout_constraintTop_toBottomOf="@id/et_pwd" />

    <TextView
        android:id="@+id/tv_enter"
        style="@style/style_btn_confirm"
        android:layout_marginLeft="100px"
        android:layout_marginRight="100px"
        android:text="@string/str_confirm"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_cancel"
        style="@style/style_btn_cancel"
        android:text="@string/str_cancel"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_enter" />
</android.support.constraint.ConstraintLayout>