<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    >

    <RelativeLayout
        android:id="@+id/layout_head"
        android:layout_width="match_parent"
        android:layout_height="180px"
        android:background="#152338">

        <ImageView
            android:id="@+id/img_back"
            style="@style/style_top_back"
            android:layout_centerVertical="true"/>

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/str_setting_network_config"
            android:textColor="@color/color_white"
            android:textSize="48px"
            android:textStyle="bold"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/layout_head"
        android:background="#0B0F14"
        android:divider="@drawable/divider_linearlayout"
        android:orientation="vertical"
        android:paddingLeft="@dimen/dimen_layout_margin"
        android:paddingTop="20px"
        android:paddingRight="@dimen/dimen_layout_margin"
        android:showDividers="middle">

        <TextView
            android:id="@+id/tv_ip"
            style="@style/style_text_next"
            android:text="@string/str_title_ip"/>

        <TextView
            android:id="@+id/tv_server"
            style="@style/style_text_next"
            android:text="@string/str_title_server"/>

    </LinearLayout>
</RelativeLayout>